force-app/main/default/objects/Student__c/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>