force-app/main/default/objects/Student__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N5</fullName>
            </value>
            <value>
                <fullName>N4</fullName>
            </value>
            <value>
                <fullName>N3</fullName>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
            <value>
                <fullName>N1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>