force-app/main/default/objects/Student__c/validationRules/Prevent_Level_Change_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Level_Change_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Level__c),
    NOT(ISBLANK(Course_Start_Date__c)),
    TODAY() &gt;= Course_Start_Date__c
)</errorConditionFormula>
    <errorMessage>You cannot change the Level after the course has started.</errorMessage>
</ValidationRule>